--- a/res/layout/mainwin.xml
+++ b/res/layout/mainwin.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
     
     <!--【主框架布局-->
     <AbsoluteLayout 
@@ -61,11 +61,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="6"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:background="@android:color/white">
                 
                 <tao.app.agplan.ui.Calendar 
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent"
+                    android:clickable="true"
+                    android:id="@+id/calendar"/>
                 
             </LinearLayout>
             <!--中部布局】-->
