--- a/res/layout/wel3.xml
+++ b/res/layout/wel3.xml
@@ -2,15 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@android:color/holo_blue_bright">
+    android:orientation="vertical">
     
-    <Button 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="开始你的AG计划"
-        android:id="@+id/btn_startuse"
-        android:background="@android:color/white"/>
+    <tao.app.agplan.win.LastWelcomeWin 
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"/>
     
 </LinearLayout>
